# informative-iterator

./: README.md  pyproject.toml
commands/project/: publish
main/: setup.py
main/informative_iterator/: __init__.py  main.py
